ajout email devoir

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
                     <div class="col-md-5">
                         <input type="text" id="prenom" class="form-control" placeholder="Prénom" required>
                     </div>
+                    <div class="col-md-5">
+                        <input type="email" id="email" class="form-control" placeholder="Email" required>
+                    </div>
                     <div class="col-md-2">
                         <button type="submit" class="btn btn-primary w-100">Ajouter</button>
                     </div>
